# openMP_basics

./: .gitignore  CMakeLists.txt  README.md  plot.py
data/: benchmark.csv  jacobi_benchmark.csv  matvec_benchmark.csv  thread_scaling.csv
src/: CMakeLists.txt
src/common_stuff/: check_residual.hpp  custom_concepts.hpp  operators.hpp
src/matrixes/: CSR.hpp  Dense.hpp
src/methods/: GaussSeidel.hpp  Jacoby.hpp  JacobyClassic.hpp
tests/: CMakeLists.txt  benchmark.cpp
